--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -1,13 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<gkx-navbar> </gkx-navbar>
+<app-navbar> </app-navbar>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3">
-         <gkx-left-menu></gkx-left-menu>   
+         <app-left-menu></app-left-menu>
     </div>
     <div class="col-md-3">
-        <gkx-desktop></gkx-desktop>
+        <app-desktop></app-desktop>
     </div>
   </div>
 </div>
-<gkx-footer></gkx-footer>
+<app-footer></gkx-footer>
