--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -1,13 +1,13 @@
-<!--The content below is only a placeholder and can be replaced.-->
+
 <app-navbar> </app-navbar>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3">
-         <app-left-menu></app-left-menu>
+         <app-leftmenu></app-leftmenu>
     </div>
     <div class="col-md-3">
         <app-desktop></app-desktop>
     </div>
   </div>
 </div>
-<app-footer></gkx-footer>
+<app-footer></app-footer>
