--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -3,10 +3,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3">
-         <app-leftmenu></app-leftmenu>
+         <app-leftmenu></app-leftmenu>         
     </div>
     <div class="col-md-3">
-        <app-desktop></app-desktop>
+        <router-outlet></router-outlet>
     </div>
   </div>
 </div>
